--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
 <div 
   class="media-block__img lazyload " 
   data-sizes="auto" 
-      data-bgset="https://raw.githubusercontent.com/benyuxPetr/cth/master/images/usluga1.jpg"
+      data-bgset=""
   >
 </div>                  <div class="media-block__text">
                   <!--<div class="media-block__category t-eyebrow-b h-color-text-gold">News</div> -->
