--- a/index.html
+++ b/index.html
@@ -938,9 +938,9 @@
 
 
                   <h1 class="home-stt">
-        <span style="font-size: 45px; letter-spacing: -5px; font-weight: 600">Автоматизация</span>
-        <span style="font-size: 45px; letter-spacing: -5px; font-weight: 600">Производственных</span>
-        <span style="font-size: 45px; letter-spacing: -5px; font-weight: 600">процессов</span>
+        <span>Автоматизация</span>
+        <span>Производственных</span>
+        <span>Процессов</span>
       </h1>
     
 
@@ -1095,7 +1095,7 @@
 <div 
   class="media-block__img lazyload " 
   data-sizes="auto" 
-      data-bgset=""
+      data-bgset="images/usluga1.jpg"
   >
 </div>                  <div class="media-block__text">
                   <!--<div class="media-block__category t-eyebrow-b h-color-text-gold">News</div> -->
@@ -1120,7 +1120,7 @@
 <div 
   class="media-block__img lazyload " 
   data-sizes="auto" 
-      data-bgset="https://raw.githubusercontent.com/benyuxPetr/cth/master/images/usluga2.jpg"
+      data-bgset="images/usluga2.jpg"
   >
 </div>                  <div class="media-block__text">
                   <!--<div class="media-block__category t-eyebrow-b h-color-text-gold">News</div> -->
@@ -1145,7 +1145,7 @@
 <div 
   class="media-block__img lazyload " 
   data-sizes="auto" 
-      data-bgset="https://raw.githubusercontent.com/benyuxPetr/cth/master/images/usluga3.jpg"
+      data-bgset="images/usluga3.jpg"
   >
 </div>                  <div class="media-block__text">
                  <!-- <div class="media-block__category t-eyebrow-b h-color-text-gold">Article</div> -->
