--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
   <div class="l-site-wrapper">
 
-    <div class="js-parallax parallax-bg">
+    <div class="js-parallax parallax-bg" style="transform: translate3d(0px, 0px, 0px);">
       <img src="images/g-bg.svg" alt="">
       <img src="images/g-bg.svg" alt="">
       <img src="images/g-bg.svg" alt="">
