--- a/index.html
+++ b/index.html
@@ -465,17 +465,17 @@
           <svg id="logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 25">
           
           	<img src="images/logo1.png" >
-          	<ul style="    
-          	margin-left: 65px;
-    		margin-top: -45px;
-    		font-size: 122%;
-
-    		">
+          	<div class="logo_1">
+          	<ul>
 				
-	<li>разработка и производство</li>
-	<li>автоматизированных</li>
-	<li>систем и комплексов</li>
+	<li style="letter-spacing: -0.78px;">
+	РАЗРАБОТКА И ПРОИЗВОДСТВО</li>
+	<li style="letter-spacing: 2.6px;">
+	АВТОМАТИЗИРОВАННЫХ</li>
+	<li style="letter-spacing: 2.5px;">
+	СИСТЕМ И КОСПЛЕКСОВ</li>
 </ul>
+				</div>
           </svg>
                   </a>
       </div>
